Bug 290637 - SimpleProfileSelectWidget doesn't show the parameter widget
Summary: SimpleProfileSelectWidget doesn't show the parameter widget
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 285413
  Show dependency treegraph
 
Reported: 2012-01-04 22:10 UTC by Daniele E. Domenichelli
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniele E. Domenichelli 2012-01-04 22:10:37 UTC
Click "Add Account"
Click "Jabber/XMPP"
Click "Back"
Click "ICQ" or "Windows Live Messenger"

The account parameter widget is not shown
Comment 1 Florian Reinhard 2012-01-05 23:42:50 UTC
Git commit d2969fa850ec3caf273dd7569f7a004721c2c69b by Florian Reinhard.
Committed on 06/01/2012 at 00:42.
Pushed by reinhard into branch 'master'.

SimpleProfileSelectWidget: make sure the selected profile has the ConnectionManager installed.

ProfileSelectWidget and SimpleProfileSelectWidget now share ProfileListModel which already did all sanity-checks on Profiles for ProfileSelectWidget.
REVIEW: 103592
Reviewed-by: David Edmundson <kde@davidedmundson.co.uk>

M  +1    -0    src/KCMTelepathyAccounts/CMakeLists.txt
M  +30   -6    src/KCMTelepathyAccounts/profile-list-model.cpp
M  +7    -5    src/KCMTelepathyAccounts/profile-list-model.h
M  +4    -27   src/KCMTelepathyAccounts/profile-select-widget.cpp
M  +2    -2    src/KCMTelepathyAccounts/profile-select-widget.h
M  +6    -40   src/KCMTelepathyAccounts/simple-profile-select-widget.cpp
M  +2    -2    src/KCMTelepathyAccounts/simple-profile-select-widget.h
M  +7    -2    src/add-account-assistant.cpp

http://commits.kde.org/telepathy-accounts-kcm/d2969fa850ec3caf273dd7569f7a004721c2c69b