SimpleProfileSelectWidget: make sure the selected profile has the ConnectionManager installed.

ProfileSelectWidget and SimpleProfileSelectWidget now share ProfileListModel which already did all sanity-checks on Profiles for ProfileSelectWidget.

BUG: 290637
REVIEW: 103592
Reviewed-by: David Edmundson <kde@davidedmundson.co.uk>